# lightshow

./: Cargo.toml  README.md  plans.txt
src/: audio.rs  camera.rs  components.rs  effects.rs  fixtures.rs  keyframes.rs  layers.rs  lib.rs  main.rs  midi.rs  network.rs  plugins.rs  resources.rs  simple_store.rs  simulation.rs  systems.rs  tests.rs  timeline.rs  ui.rs  util.rs
src/audio/: capture.rs  processing.rs
src/audio/processing/: fft.rs
src/camera/: mod.rs  systems.rs
src/components/: effects.rs  fixtures.rs  keyframes.rs  network.rs
src/effects/: fill.rs  shockwave.rs
src/fixtures/: color_light.rs
src/plugins/: camera.rs  effects.rs  fixtures.rs  network.rs  simulation.rs  ui.rs
src/resources/: camera.rs  network.rs  simulation.rs
src/simulation/: components.rs  mod.rs  resources.rs  systems.rs
src/systems/: camera.rs  fixtures.rs  network.rs  simulation.rs  tests.rs  ui.rs
src/systems/effects/: fill.rs  shockwave.rs
src/systems/fixtures/: color_light.rs
src/systems/ui/: timeline.rs
src/tests/: frequency_cascade.rs  single_pulse.rs
src/timeline/: effects.rs  keyframes.rs  layer_tree.rs  layers.rs  playback.rs  sequence_tree.rs  sequences.rs  tracks.rs
src/timeline/effects/: color.rs
src/timeline/effects/color/: fill.rs  frequency_cascade_effect.rs  shockwave.rs
src/timeline/effects/pan_tilt/: all.rs
src/ui/: timeline.rs
src/util/: blending.rs  controllers.rs  keyframes.rs
src/util/blending/: colors.rs  pan_tilt.rs
