[package]
name = "lightshow"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
artnet_protocol = "0.4.3"
bevy = { version = "0.17", features = ["dynamic_linking"] }
bevy_egui = "0.37.1"
midir = "0.10.1"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
